[gd_scene load_steps=17 format=3 uid="uid://eoet0lsvyyex"]

[ext_resource type="Texture2D" uid="uid://bgphjavo087ih" path="res://icon.svg" id="1_8gfbl"]
[ext_resource type="Script" path="res://Scripts/Objects/Player/PlayerController.gd" id="1_f0swu"]
[ext_resource type="Script" path="res://Scripts/Objects/Player/PlayerStateMachine.gd" id="3_t2576"]
[ext_resource type="Script" path="res://Scripts/Objects/Player/States/AirState.gd" id="4_ltm20"]
[ext_resource type="Script" path="res://Scripts/Objects/Player/States/FloorState.gd" id="5_ajg5c"]

[sub_resource type="PlaneMesh" id="PlaneMesh_fu8vn"]
size = Vector2(1.2, 1.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mqfv8"]
shading_mode = 0
albedo_color = Color(0.384314, 0.384314, 0.384314, 1)

[sub_resource type="SphereMesh" id="SphereMesh_wrusw"]
material = SubResource("StandardMaterial3D_mqfv8")
radius = 0.125
height = 0.25

[sub_resource type="Curve" id="Curve_0vxqk"]
_data = [Vector2(0.0271739, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_sukta"]
size = Vector3(1.25098, 1.23462, 0.001)

[sub_resource type="Animation" id="Animation_r7cxn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteMount/Sprite3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xdaoh"]
resource_name = "movement"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteMount/Sprite3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.261799), Vector3(0, 0, 0), Vector3(0, 0, 0.261799), Vector3(0, 0, 0.0109084)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b24np"]
_data = {
"RESET": SubResource("Animation_r7cxn"),
"movement": SubResource("Animation_xdaoh")
}

[sub_resource type="Animation" id="Animation_44lxi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteMount:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hxjnd"]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteMount:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.5, 1.12, 1), Vector3(1.275, 0.67, 1), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pnbq4"]
_data = {
"RESET": SubResource("Animation_44lxi"),
"jump": SubResource("Animation_hxjnd")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_f0swu")
move_speed = 450.0
acc = 0.1
gravity_force = 20.0
jump_force = 10.0

[node name="SpriteMount" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="SpriteMount"]
unique_name_in_owner = true
texture = ExtResource("1_8gfbl")

[node name="ShadowMesh" type="MeshInstance3D" parent="SpriteMount/Sprite3D"]
transform = Transform3D(0.999941, -4.7681e-10, -0.0109081, -0.0109081, -4.37088e-08, -0.999941, 0, 1, -4.37114e-08, 0, 0, -0.00690523)
mesh = SubResource("PlaneMesh_fu8vn")
skeleton = NodePath("../..")

[node name="MovementParticles" type="CPUParticles3D" parent="SpriteMount"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00023365, -0.624457, -0.178662)
emitting = false
amount = 20
lifetime = 0.8
mesh = SubResource("SphereMesh_wrusw")
emission_shape = 1
emission_sphere_radius = 0.2
gravity = Vector3(0, 0, 0)
scale_amount_curve = SubResource("Curve_0vxqk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_sukta")

[node name="SpriteAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b24np")
}

[node name="SpriteMountAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pnbq4")
}

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("player", "current_state")]
script = ExtResource("3_t2576")
player = NodePath("..")
current_state = NodePath("FloorState")

[node name="AirState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_ltm20")

[node name="FloorState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_ajg5c")

[node name="JumpParticlesPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.629875, 0)
